@@ -60,6 +60,7 @@ enum imstatus buddy_getstatus(gpointer rosterdata);
 const char *buddy_getstatusmsg(gpointer rosterdata);
 void    buddy_setflags(gpointer rosterdata, guint flags, guint value);
 guint   buddy_getflags(gpointer rosterdata);
+gpointer unread_msg(gpointer rosterdata);
 
 GSList *compl_list(guint type);
 
